<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey11">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dp_16">

            <com.suvesh.utils.CustomTextView
                android:id="@+id/commentToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                app:font="semibold"
                android:textAllCaps="true"
                android:textSize="@dimen/sp_16"
                android:text="S e t t i n g s" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btnClose"
                android:layout_width="18dp"
                android:layout_height="18dp"
                app:srcCompat="@drawable/ic_close"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_serach"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llLogout"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/dp_24">

            <com.suvesh.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey6"
                android:textSize="@dimen/sp_16"
                android:text="GENERAL"/>


          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_marginTop="@dimen/dp_16"
              android:background="@color/white">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="5"
                  android:layout_margin="@dimen/dp_16">

                  <ImageView
                      android:layout_width="0dp"
                      android:layout_height="20dp"
                      android:layout_weight="1"
                      android:src="@drawable/username"/>

                  <com.suvesh.utils.CustomTextView
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="4"
                      android:layout_marginLeft="@dimen/dp_24"
                      android:text="@string/profile"
                      android:textSize="@dimen/dp_20"/>

                  <android.support.v7.widget.AppCompatImageView
                      android:layout_width="20dp"
                      android:layout_height="20dp"
                      app:srcCompat="@drawable/ic_right_arrow"/>
              </LinearLayout>



              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="5"
                  android:layout_margin="@dimen/dp_16">

                  <ImageView
                      android:layout_width="0dp"
                      android:layout_height="20dp"
                      android:layout_weight=".5"
                      android:layout_marginLeft="@dimen/dp_16"
                      android:src="@drawable/password"/>

                  <com.suvesh.utils.CustomTextView
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="4.5"
                      android:layout_marginLeft="@dimen/dp_32"
                      android:text="@string/change_passward"
                      android:textSize="@dimen/dp_20"/>

                  <android.support.v7.widget.AppCompatImageView
                      android:layout_width="20dp"
                      android:layout_height="20dp"
                      app:srcCompat="@drawable/ic_right_arrow"/>
              </LinearLayout>
          </LinearLayout>


            <com.suvesh.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey6"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_24"
                android:text="LINKED ACCOUNT"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/dp_60"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:layout_margin="@dimen/dp_16">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:src="@drawable/linked_in"/>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.9"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:text="@string/linkdin"
                        android:textSize="@dimen/dp_20"/>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:text="yes"/>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:layout_margin="@dimen/dp_16">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight=".5"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:src="@drawable/facebook"/>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:layout_marginLeft="@dimen/dp_32"
                        android:text="@string/facebook"
                        android:textSize="@dimen/dp_20"/>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:textAllCaps="true"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:text="No"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:layout_margin="@dimen/dp_16">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight=".5"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:src="@drawable/twitter"/>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:layout_marginLeft="@dimen/dp_32"
                        android:text="@string/twitter"
                        android:textSize="@dimen/dp_20"/>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:textAllCaps="true"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:text="No"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:layout_margin="@dimen/dp_16">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight=".5"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:src="@drawable/pinterest"/>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:layout_marginLeft="@dimen/dp_32"
                        android:text="@string/pintrest"
                        android:textSize="@dimen/dp_20"/>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:textAllCaps="true"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:text="yes"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:layout_margin="@dimen/dp_16">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight=".5"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:src="@drawable/facebook"/>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:layout_marginLeft="@dimen/dp_32"
                        android:text="@string/facebook"
                        android:textSize="@dimen/dp_20"/>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:textAllCaps="true"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:text="No"/>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <RelativeLayout
        android:id="@+id/llLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/sp_12"
        android:background="@drawable/button_gradient"
        android:visibility="visible">

        <com.suvesh.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGOUT"
            app:font="semibold"
            android:padding="@dimen/dp_8"/>

    </RelativeLayout>

</RelativeLayout>